# tobytes

./: NOTICE  README.md
.github/workflows/: python-tests.yml  rust-tests.yml
py/: README.md  pyproject.toml
py/src/tobytes/: __init__.py  codec.py  intern_table.py  table.py
py/tests/: test_basic.py  test_intern_tables.py  test_namespace.py  test_table_namespace.py
rs/: Cargo.toml
rs/src/: codec.rs  decode.rs  encode.rs  error.rs  intern.rs  lib.rs  object.rs  table_ns.rs  tests.rs
rs/tobytes-derive/: Cargo.toml
rs/tobytes-derive/src/: lib.rs
tests/py-rs/: Cargo.toml  build.rs  test_cross_language.py
tests/py-rs/cases/: bool.yaml  floats-f64.yaml  hashmap-string-i32.yaml  hashmap-string-string.yaml  hashmap-string-vec-string.yaml  integers-i32.yaml  integers-i64.yaml  integers-u8.yaml  nested-vec-vec-i32.yaml  nested-vec-vec-string.yaml  numpy-ndarray-2d-f32.yaml  numpy-ndarray-2d.yaml  numpy-ndarray-3d.yaml  numpy-ndarray-f64.yaml  numpy-ndarray-i64.yaml  numpy-ndarray-u8.yaml  numpy-ndarray.yaml  polars-dataframe.yaml  strings-boundaries.yaml  strings-special.yaml  strings.yaml  struct-person.yaml  vec-i32.yaml  vec-string.yaml
tests/py-rs/src/: main.rs
