[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tobytes"
version = "0.0.1"
description = "A python implementation of the tobytes serialization specification."
authors = [{ name = "Steve Stagg (Offset Design)" }]
dependencies = [
    "msgpack>=1.1.0,<2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tobytes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]