[package]
name = "tobytes"
version = "0.1.0"
edition = "2021"

[dependencies]
rmp = "0.8"
rmpv = "1.3"
thiserror = "1.0"
ndarray = { version = "0.16", optional = true }
ndarray-npy = { version = "0.9", optional = true }
tobytes-derive = { path = "./tobytes-derive", optional = true }

[features]
default = ["math", "derive"]
math = ["ndarray", "ndarray-npy"]
derive = ["tobytes-derive"]

[dev-dependencies]
rstest = "0.21"
compose-idents = "0.3.0"