[package]
name = "test_harness"
version = "0.1.0"
edition = "2021"

[dependencies]
tobytes = { path = "../../rs", features = ["math"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
rmp = "0.8"
rmpv = "1.3"
ndarray = "0.16"
ndarray-npy = "0.9"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
